# casperlabs-PoS

./: Makefile
contract/src/: erc20.sol  main.rs
tests/: Cargo.toml
